# capz

./: .gitignore  CLAUDE.md  FINDINGS.md  PLAN.md  PROGRESS-BUG.md  PROGRESS-COSMETIC.md  PROGRESS-FEATURE.md  PROGRESS-NEXT.md  PROGRESS.md  README.md  index.html  latest.json  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: build.yml  deploy-web.yml  e2e.yml  update-cask.yml
.ladle/: components.tsx  config.mjs
.playwright-mcp/: page-2026-07-03T03-33-02-413Z.yml  page-2026-07-03T03-35-26-644Z.yml
docs/: INSTALL-WINDOWS.th.md  OCR-THAI-WINDOWS.th.md  SIGNING-SELFSIGNED.md  SIGNING.md  manual-qa.md
docs/archive/: PROGRESS-BUG-LANDED.md  PROGRESS-COSMETIC-LANDED.md  PROGRESS-FEATURE-LANDED.md  claude-plan-one-shot-tool.md
e2e/: README.md  playwright.config.ts  tsconfig.json
e2e/fixtures/: tauri-mock.ts
e2e/tauri/: smoke.spec.ts
e2e/web/: capture.spec.ts  editor-tools.spec.ts  editor.spec.ts  home.spec.ts  ocr.spec.ts  onboarding-tcc.spec.ts  onboarding.spec.ts  overlay.spec.ts  paste.spec.ts  settings-hotkey.spec.ts  settings.spec.ts
packaging/homebrew-cask/: README.md  capz.rb
public/: _redirects
scripts/: release.mjs  setup-signing-cert.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  editor.json  onboarding.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: accel.rs  capture_dispatch.rs  lib.rs  modifiers.rs  notice.rs  ring.rs  ring_poc.rs  shortcuts.rs  state.rs  tray.rs  windows.rs
src-tauri/src/commands/: capture.rs  command_ring.rs  editor.rs  mod.rs  ocr.rs  output.rs  overlay.rs  permissions.rs  pickers.rs  scroll.rs  stickers.rs
src-tauri/src/services/: capture_service.rs  config_store.rs  image_service.rs  mod.rs  monitor_service.rs  screencapture.rs  sound.rs  stitch.rs  synthetic_scroll.rs  window_service.rs
src-tauri/src/services/ocr/: macos.rs  mod.rs  windows.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ThemeManager.tsx
src/hooks/: use-latest-release.ts  use-os.ts  useEditorShortcuts.ts
src/i18n/: LanguageProvider.tsx  dict.ts  useT.ts
src/lib/: accessibility.ts  addImage.ts  annotationBounds.test.ts  annotationBounds.ts  areaSelection.test.ts  areaSelection.ts  backdrop.test.ts  backdrop.ts  captureRouting.test.ts  captureRouting.ts  config.ts  (+31 more)
(+106 files in other folders)
